[package]
name = "rusty-bunny"
version = "0.1.0"
authors = ["Joe Previte <jprevite@fb.com>", "Aaron Lichtman <alichtman@meta.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
percent-encoding = "2.3"
tokio = { version = "1", features = ["macros"] }
